[package]
edition = "2021"
name = "osaka"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
derive = {path = "./derive"}
libc = "0.2.126"
pin-project-lite = "0.2.9"
polling = "2.2.0"

[dev-dependencies]
futures = "0.3.21"

[workspace]
members = [
  "derive",
]
