[package]
edition = "2021"
name = "osaka"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "o-sleep"
path = "bin/sleep_test.rs"

[dependencies]
colored = "2.0.0"
libc = "0.2.126"
osaka_derive = {path = "../osaka_derive"}
pin-project-lite = "0.2.9"
polling = "2.2.0"

[dev-dependencies]
futures = "0.3.21"
